--- a/000-index.ipynb
+++ b/000-index.ipynb
@@ -39,7 +39,7 @@
     "        2. [Indexing and Selection](013-1-numpy_indexing-and_selection.ipynb)\n",
     "        3. [Operations](013-2-numpy_operations.ipynb)\n",
     "    4. [Pandas en Matplotlib](014-pandas_matplotlib_introduction_case_corona.ipynb)\n",
-    "    5. [Exercise \"Monte Carlo simulation for condensators\"]()\n",
+    "    5. [Exercise \"Monte Carlo simulation for condensators\"](015-exercise_montecarlo.ipynb)\n",
     "2. End-toEnd Machine Learning Project\n",
     "    1. [Notebook](020-end_to_end_machine_learning_project.ipynb)  \n",
     "    2. [Excercise \"Building OAT\"](021-exercise_building_oat.ipynb)\n",
