--- a/015-the_machine_learning_landscape.ipynb
+++ b/015-the_machine_learning_landscape.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "<table align=\"left\">\n",
     "  <td>\n",
-    "    <a href=\"https://colab.research.google.com/github/jdecorte/machinelearning/blob/main/011-the_machine_learning_landscape.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
+    "    <a href=\"https://colab.research.google.com/github/jdecorte/ai_ml/blob/main/011-the_machine_learning_landscape.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
     "  </td>\n",
     "</table>"
    ]
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Code example 1-1"
+    "# Code example"
    ]
   },
   {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -517,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.12"
   },
   "metadata": {
    "interpreter": {
