--- a/012-2-numpy_operations.ipynb
+++ b/012-2-numpy_operations.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
        "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,14 +110,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-5-11ca4d9cc351>:3: RuntimeWarning: invalid value encountered in true_divide\n",
+      "C:\\Users\\jcor864\\AppData\\Local\\Temp\\ipykernel_24800\\205474414.py:3: RuntimeWarning: invalid value encountered in true_divide\n",
       "  arr/arr\n"
      ]
     },
@@ -127,7 +127,7 @@
        "array([nan,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
