--- a/012-3-numpy-exercises.ipynb
+++ b/012-3-numpy-exercises.ipynb
@@ -63,7 +63,7 @@
     }
    ],
    "source": [
-    "np.zeros(10)\n"
+    "\n"
    ]
   },
   {
@@ -109,9 +109,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "np.ones(10)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -156,9 +154,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "np.ones(10) * 5"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -205,9 +201,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "np.arange(10, 51)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -255,9 +249,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "np.arange(10, 51)[np.arange(10, 51)%2 == 0]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -305,9 +297,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "np.arange(0,9).reshape(3,3)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -356,9 +346,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "np.eye(3)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -405,9 +393,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "np.random.rand(1)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -458,9 +444,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "np.random.randn(25)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -518,9 +502,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "np.linspace(0.01,1,100).reshape(10,10)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -577,9 +559,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "np.linspace(0,1,20)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -665,8 +645,7 @@
     }
    ],
    "source": [
-    "# CODE HERE\n",
-    "mat[2:, 1:]"
+    "# CODE HERE\n"
    ]
   },
   {
@@ -714,9 +693,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "mat[3,4]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -763,9 +740,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "mat[:3,1].reshape(3,1)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -812,9 +787,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "mat[4]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -860,9 +833,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "mat[3:]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -915,9 +886,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "mat.sum()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -962,9 +931,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "mat.std()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1009,9 +976,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "mat.sum(axis=0)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1058,10 +1023,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "np.random.seed(101)\n",
-    "np.random.rand(1)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
