--- a/000-index.ipynb
+++ b/000-index.ipynb
@@ -38,6 +38,7 @@
     "        1. [Arrays](013-0-numpy_arrays.ipynb)\n",
     "        2. [Indexing and Selection](013-1-numpy_indexing-and_selection.ipynb)\n",
     "        3. [Operations](013-2-numpy_operations.ipynb)\n",
+    "        4. [Exercises](012-3-numpy_exercises.ipynb)\n",
     "    4. [Pandas en Matplotlib](014-pandas_matplotlib_introduction_case_corona.ipynb)\n",
     "    5. [Exercise \"Monte Carlo simulation for condensators\"](015-exercise_montecarlo.ipynb)\n",
     "2. End-toEnd Machine Learning Project\n",
