--- a/015-exercise_montecarlo.ipynb
+++ b/015-exercise_montecarlo.ipynb
@@ -41,6 +41,13 @@
     "V_tot = 10.6\n",
     "threshold = 2.7"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Teken tenslotte het histogram van de maximale spanning (na hoofdstuk \"End-to-end machine learning\")"
+   ]
   }
  ],
  "metadata": {
