--- a/020-end_to_end_machine_learning_project.ipynb
+++ b/020-end_to_end_machine_learning_project.ipynb
@@ -3713,7 +3713,23 @@
    "cell_type": "code",
    "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, estimator=RandomForestRegressor(random_state=42),\n",
+       "             param_grid=[{'max_features': [2, 4, 6, 8],\n",
+       "                          'n_estimators': [3, 10, 30]},\n",
+       "                         {'bootstrap': [False], 'max_features': [2, 3, 4],\n",
+       "                          'n_estimators': [3, 10]}],\n",
+       "             return_train_score=True, scoring='neg_mean_squared_error')"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
@@ -3741,7 +3757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -3750,7 +3766,7 @@
        "{'max_features': 8, 'n_estimators': 30}"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3761,7 +3777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -3770,7 +3786,7 @@
        "RandomForestRegressor(max_features=8, n_estimators=30, random_state=42)"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3788,7 +3804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -3831,7 +3847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3848,7 +3864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -3857,7 +3873,7 @@
        "47873.26095812988"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3882,7 +3898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -3892,7 +3908,7 @@
        "       234756.66666667])"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3916,7 +3932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3925,7 +3941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3937,7 +3953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -4053,7 +4069,7 @@
        "20496      1837.0       580.0         4.4964       <1H OCEAN  "
       ]
      },
-     "execution_count": 180,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4064,7 +4080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -4074,7 +4090,7 @@
        "       234756.66666667])"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
