--- a/000-index.ipynb
+++ b/000-index.ipynb
@@ -72,6 +72,7 @@
     "###  PART 2 - Neural Networks and Deep Learning\n",
     "\n",
     "1.  Artificial Neural Networks with Keras\n",
+    "    1.  [Notebook](100-neural_nets_with_keras.ipynb)\n",
     "2.  Training Deep Neural Networks\n",
     "3.  Deep Computer Vision Using Convolutional Neural Networks\n"
    ]
