--- a/000-index.ipynb
+++ b/000-index.ipynb
@@ -61,13 +61,15 @@
     "7. Ensemble Learning and Random Forests\n",
     "    1. [Notebook](070-ensemble_learning_and_random_forests.ipynb)\n",
     "    2. [Exercise](071-exercise-ensembles_breast_cancer.ipynb)\n",
-    "8. Unsupervised Learning\n",
-    "   1. [Association Rules](080-association_rules.ipynb)\n",
-    "   2. [Association Rules: case online retail](081-market_basket_analysis_retail.ipynb)\n",
-    "   3. [Exercise AdventureWorks](082-exercise_adventure_works.ipynb)\n",
-    "   4. [Clustering](083-clustering.ipynb)\n",
-    "   5. [Exercise \"Wholesale customers\"](084-clustering_exercise_wholesale_customers.ipynb)\n",
-    "   6. [t-SNE Visualization](085-tsne_visualization.ipynb)\n",
+    "8. Dimensionality Reduction\n",
+    "   1. [t-SNE Visualization](085-tsne_visualization.ipynb)\n",
+    "9.  Unsupervised Learning\n",
+    "   2. [Association Rules](080-association_rules.ipynb)\n",
+    "   3. [Association Rules: case online retail](081-market_basket_analysis_retail.ipynb)\n",
+    "   4. [Exercise AdventureWorks](082-exercise_adventure_works.ipynb)\n",
+    "   5. [Clustering](083-clustering.ipynb)\n",
+    "   6. [Exercise \"Wholesale customers\"](084-clustering_exercise_wholesale_customers.ipynb)\n",
+    "\n",
     "   \n",
     "###  PART 2 - Neural Networks and Deep Learning\n",
     "\n",
