--- a/012-python_crash_course.ipynb
+++ b/012-python_crash_course.ipynb
@@ -77,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "2B1NaNYYh_ci",
         "outputId": "c21c312d-8e03-4a49-c5bf-422d45cd6a50"
@@ -223,11 +223,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "TWNAXid8h_ck"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hello\n",
+            "HELLO\n",
+            "  hello\n",
+            " hello \n",
+            "he(ell)(ell)o\n",
+            "world\n"
+          ]
+        }
+      ],
       "source": [
         "s = \"hello\"\n",
         "print(s.capitalize())  # Capitalize a string; prints \"Hello\"\n",
@@ -268,7 +281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "eohGIFjPh_cl",
         "outputId": "f544f415-e001-434a-de29-8262188bd881"
@@ -327,7 +340,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "ZHqpZCkFh_cl",
         "outputId": "4b690abf-d6fd-43c7-93fd-d82386572758"
@@ -363,7 +376,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "BCc1WV2Yh_cm",
         "outputId": "476fc693-36bf-40fa-869d-0f6315da2086"
@@ -421,7 +434,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "DYP3WdHdh_cm",
         "outputId": "57d852b7-7e87-4659-e5ac-343845ca9793"
@@ -466,7 +479,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "nXm7UTq4h_cm",
         "outputId": "529e8918-bba9-4f38-87cf-e837d28625a1"
@@ -1145,7 +1158,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "QxbB0zv2h_cq",
         "outputId": "c59c62c1-e8c5-494b-e775-674a8a9794b9"
