--- a/015-exercise_montecarlo.ipynb
+++ b/015-exercise_montecarlo.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "Bereken via een Monte-Carlo simulatie het percentage van de schakelingen (van 4 condensatoren) waarbij over minstens één condensator een spanning komt te staan van > 2,7 V. \n",
     "\n",
-    "Gebruik de volgend parametewaarden:"
+    "Gebruik de volgend parameterwaarden:"
    ]
   },
   {
