--- a/013-0-numpy_arrays.ipynb
+++ b/013-0-numpy_arrays.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "list"
+       "numpy.ndarray"
       ]
      },
      "execution_count": 4,
@@ -88,7 +88,7 @@
     }
    ],
    "source": [
-    "type(my_list)"
+    "type(my_array)"
    ]
   },
   {
@@ -465,16 +465,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.09953325, 0.59671963])"
+       "array([0.85559001, 0.56017022])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,20 +485,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.4413855 , 0.24100826, 0.71487228, 0.94095112, 0.55986734],\n",
-       "       [0.29725022, 0.33187405, 0.96922112, 0.78771103, 0.11088753],\n",
-       "       [0.25921936, 0.70829129, 0.55078667, 0.2840925 , 0.07248151],\n",
-       "       [0.9367555 , 0.10323587, 0.58681105, 0.2280848 , 0.61686032],\n",
-       "       [0.58442792, 0.26455524, 0.99199939, 0.87132479, 0.69682872]])"
+       "array([[0.84483223, 0.31431531, 0.5521431 , 0.15046783, 0.18142115],\n",
+       "       [0.34027844, 0.56702029, 0.72406333, 0.80193156, 0.54473913],\n",
+       "       [0.95878877, 0.21225402, 0.35003503, 0.19088867, 0.60259679],\n",
+       "       [0.37580772, 0.04924073, 0.69166137, 0.16831716, 0.03819572],\n",
+       "       [0.14158544, 0.91596086, 0.63355184, 0.12225923, 0.75706447]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,13 +524,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[10.53482284 10.61591005 10.64629209 10.8005833   9.6405918 ]\n",
-      " [11.38194203  9.81258151  9.88355259  9.84757039  9.33153476]\n",
-      " [10.0762124  12.00909483 10.57659715  9.95785487  9.89070921]\n",
+      "[[ 9.66638863  9.90752917 10.561693    8.24764365 11.00306814]\n",
+      " [ 8.13169519 10.29323862  9.96156399  8.95274686 10.65279376]\n",
+      " [ 9.83779391  8.36685901 12.28577962  8.61410352  8.71159113]\n",
       " ...\n",
-      " [ 9.69495626 10.62006908 10.99326395  9.46348345 11.48548954]\n",
-      " [ 9.19372357  9.48942663  8.99149507 10.8950228   8.07210795]\n",
-      " [ 9.95549755  8.34940654 10.21822193 11.10950966 10.62370493]]\n"
+      " [ 9.87636181  8.55257759  9.4968403   8.81862587 11.09991396]\n",
+      " [ 9.85285144 10.39504273 10.12087395 11.93450809 10.2479868 ]\n",
+      " [10.42903736 11.07968278  9.37387088  8.20250712  8.24027267]]\n"
      ]
     }
    ],
@@ -554,16 +554,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-0.18497885, -0.7018368 ])"
+       "array([1.03983483, 1.10658737])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,20 +574,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.25069555,  0.74186511,  1.13781207, -0.54649701, -1.18973217],\n",
-       "       [-1.2011349 , -0.16886624,  0.99672369, -0.31495718,  0.13748903],\n",
-       "       [ 0.5736017 , -0.03981728,  0.4821612 , -1.0500268 ,  0.79647184],\n",
-       "       [-0.95036139, -0.20024574, -2.30287875,  0.65232605,  0.39834622],\n",
-       "       [-0.94817451, -0.04282499, -2.46598218,  0.9874794 ,  0.52580529]])"
+       "array([[-0.17547658,  2.01568242,  1.1104354 , -1.12720574, -0.97750711],\n",
+       "       [ 0.27614769,  0.12947511,  0.91996832,  1.05015626, -0.23882198],\n",
+       "       [-2.01404874,  0.92284974, -0.95454825,  0.36482778,  0.44095986],\n",
+       "       [ 0.20076811,  0.3625068 ,  0.48840625,  0.42738285,  0.8111679 ],\n",
+       "       [-0.78598558, -0.63572175, -2.66876741, -0.83793816, -1.14736958]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,16 +606,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "36"
+       "6"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,16 +626,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([75, 62, 39, 98, 14, 67, 54, 65, 89, 14])"
+       "array([14, 98, 53, 66, 19, 53, 91, 30, 44, 75])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
        "array([0.37454012, 0.95071431, 0.73199394, 0.59865848])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +727,7 @@
        "       17, 18, 19, 20, 21, 22, 23, 24])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
        "array([38, 18, 22, 10, 10, 23, 35, 39, 23,  2])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
        "       [20, 21, 22, 23, 24]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
        "array([38, 18, 22, 10, 10, 23, 35, 39, 23,  2])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
        "39"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +848,7 @@
        "7"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +868,7 @@
        "2"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +888,7 @@
        "9"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
        "(25,)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,29 +929,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15,\n",
-       "        16, 17, 18, 19, 20, 21, 22, 23, 24]])"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Notice the two sets of brackets\n",
-    "arr.reshape(1,25)"
+    "arr=arr.reshape(1,25)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +948,27 @@
        "(1, 25)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 25)"
+      ]
+     },
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1012,7 @@
        "       [24]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1032,7 @@
        "(25, 1)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1061,7 @@
        "dtype('int32')"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1081,7 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
