--- a/013-2-numpy_operations.ipynb
+++ b/013-2-numpy_operations.ipynb
@@ -110,14 +110,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jcor864\\AppData\\Local\\Temp\\ipykernel_24800\\205474414.py:3: RuntimeWarning: invalid value encountered in true_divide\n",
+      "C:\\Users\\jcor864\\AppData\\Local\\Temp\\ipykernel_9932\\205474414.py:3: RuntimeWarning: invalid value encountered in true_divide\n",
       "  arr/arr\n"
      ]
     },
@@ -127,7 +127,7 @@
        "array([nan,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-6-9b0f118908c2>:2: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "C:\\Users\\jcor864\\AppData\\Local\\Temp\\ipykernel_9932\\616699925.py:2: RuntimeWarning: divide by zero encountered in true_divide\n",
       "  1/arr\n"
      ]
     },
@@ -273,7 +273,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-11-f71dc4fc6401>:2: RuntimeWarning: divide by zero encountered in log\n",
+      "C:\\Users\\jcor864\\AppData\\Local\\Temp\\ipykernel_9932\\2367246271.py:2: RuntimeWarning: divide by zero encountered in log\n",
       "  np.log(arr)\n"
      ]
     },
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "       [ 9, 10, 11, 12]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "array([15, 18, 21, 24])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
        "(3, 4)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -502,7 +502,7 @@
        "array([10, 26, 42])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
        "       [ 9, 10, 11, 12]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
        "       [21, 22, 23, 24]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
        "       [ 9, 10, 11, 12, 21, 22, 23, 24]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
        "       [21, 22, 23, 24]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
