--- a/000-index.ipynb
+++ b/000-index.ipynb
@@ -82,6 +82,7 @@
     "\n",
     "- [numpy](solutions/012-3-numpy-exercises_solution.ipynb)\n",
     "- [Monte Carlo](solutions/015-exercise_montecarlo_solution.ipynb)\n",
+    "- [Building OAT](solutions/021-exercise_building_oat_solution.ipynb)\n",
     "\n"
    ]
   }
