--- a/040-training_models.ipynb
+++ b/040-training_models.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "<table align=\"left\">\n",
     "  <td>\n",
-    "    <a href=\"https://colab.research.google.com/github/jdecorte/machinelearning/blob/main/040-training_models.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
+    "    <a href=\"https://colab.research.google.com/github/jdecorte/ai_ml/blob/main/040-training_models.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
     "  </td>\n",
     "</table>"
    ]
@@ -348,6 +348,7 @@
     "In practice, with stochastic gradient descent we go through a number of rounds (called _epochs_). \n",
     "- In each epoch we iterate through $m$ (= number of instances in the training set) randomly selected instances. \n",
     "- At each such an iteration we calculate the gradient and try to approach the minimum a bit closer. \n",
+    "- Number of epochs = number of times we go through the complete training set.\n",
     "\n",
     "**The number of epochs is an important hyperparameter for algorithms that use stochastic gradient descent.**\n",
     "\n",
