--- a/050-support_vector_machines.ipynb
+++ b/050-support_vector_machines.ipynb
@@ -295,7 +295,7 @@
     "- Adding polynomial features is simple to implement and can work great with all sorts of Machine Learning algorithms (not just SVMs). \n",
     "- At a **low polynomial degre**e, this method **cannot deal with very complex datasets**.\n",
     "- With a **high polynomial degree** it creates a huge number of features, making the **model too slow**.\n",
-    "- Fortunately, when using SVMs you can apply an almost miraculous mathematical technique called the _kernel trick_ (explained in a moment). \n",
+    "- Fortunately, when using SVMs you can apply an almost miraculous mathematical technique called the _kernel trick_. \n",
     "    - **Get the same result** as if you had added many polynomial features, even with very high-degree polynomials, without actually having to add them. \n",
     "    - There is **no combinatorial explosion of the number of features** because you don’t actually add any features. \n",
     "    - This trick is **implemented by the SVC class**. \n",
