--- a/060-decision_trees.ipynb
+++ b/060-decision_trees.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "<table align=\"left\">\n",
     "  <td>\n",
-    "    <a href=\"https://colab.research.google.com/github/jdecorte/machinelearning/blob/main/060-decision_trees.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
+    "    <a href=\"https://colab.research.google.com/github/jdecorte/ai_ml/blob/main/060-decision_trees.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
     "  </td>\n",
     "</table>"
    ]
@@ -194,7 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now use the tree represented above to make predictions if you find an iris an want to classify it. \n",
+    "We can now use the tree represented above to make predictions if you find an iris and want to classify it. \n",
     "- start at the _root node_ (depth 0, at the top): \n",
     "- this node asks whether the flower’s petal length is smaller than or equal to 2.45 cm.\n",
     "    - if it is you move down to the root’s left child node (depth 1, left).\n",
@@ -503,7 +503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.12"
   },
   "nav_menu": {
    "height": "309px",
