--- a/070-ensemble_learning_and_random_forests.ipynb
+++ b/070-ensemble_learning_and_random_forests.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "<table align=\"left\">\n",
     "  <td>\n",
-    "    <a href=\"https://colab.research.google.com/github/jdecorte/machinelearning/blob/main/070-ensemble_learning_and_random_forests.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
+    "    <a href=\"https://colab.research.google.com/github/jdecorte/ai_ml/blob/main/070-ensemble_learning_and_random_forests.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
     "  </td>\n",
     "</table>"
    ]
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "                             ('svc', SVC(random_state=42))])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
        "                 voting='soft')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
     "# Bagging and Pasting\n",
     "Using a diverse set of classifiers:\n",
     "- use very different training algorithms (see above)\n",
-    "- to use the same training algorithm for every predictor and train them on different random subsets of the training set\n",
+    "- use the same training algorithm for every predictor and train them on different random subsets of the training set\n",
     "- _bagging_: sampling _with replacement_: each training sample can appear multiple times when training a single predictor\n",
     "- _pasting_: sampling _without replacement_\n",
     "\n",
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
     "\n",
     "bag_clf = BaggingClassifier(\n",
     "    DecisionTreeClassifier(), n_estimators=500,\n",
-    "    max_samples=100, bootstrap=True, n_jobs=-1,random_state=42)  # n_jobs: number of CPU cores used for training and prediction (-1 = all availablre)\n",
+    "    max_samples=100, bootstrap=True, n_jobs=-1,random_state=42)  # n_jobs: number of CPU cores used for training and prediction (-1 = all available)\n",
     "bag_clf.fit(X_train, y_train)\n",
     "y_pred = bag_clf.predict(X_test)"
    ]
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "0.8986666666666666"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {
     "scrolled": true
    },
@@ -466,7 +466,7 @@
        "0.912"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
        "0.976"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,7 @@
        "array([0.11249225, 0.02311929, 0.44103046, 0.423358  ])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
        "                   learning_rate=0.5, n_estimators=200, random_state=42)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +742,7 @@
        "DecisionTreeRegressor(max_depth=2, random_state=42)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
        "DecisionTreeRegressor(max_depth=2, random_state=42)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
        "DecisionTreeRegressor(max_depth=2, random_state=42)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +848,7 @@
        "array([0.75026781])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,12 +873,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's try a gradient boosting regressor:"
+    "A simpler way to train GBRT ensembles is to use Scikit-Learn’s `GradientBoostingRegressor` class.\n",
+    "\n",
+    "Much like the `RandomForestRegressor` class, it has hyperparameters \n",
+    "- to control the growth of Decision Trees (e.g., `max_depth`, `min_samples_leaf`)\n",
+    "- to control the ensemble training\n",
+    "    - number of trees (`n_estimators`). \n",
+    "  \n",
+    "The following code creates the same ensemble as the previous one:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +895,7 @@
        "                          random_state=42)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +946,7 @@
        "GradientBoostingRegressor(max_depth=2, n_estimators=56, random_state=42)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
