--- a/solutions/031-exercise_heart_disease_solution.ipynb
+++ b/solutions/031-exercise_heart_disease_solution.ipynb
@@ -6,7 +6,7 @@
       "source": [
         "<table align=\"left\">\n",
         "  <td>\n",
-        "    <a href=\"https://colab.research.google.com/github/jdecorte/ai_ml/blob/main/solutions/031-exercise_heart_disease.ipynb_solution.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
+        "    <a href=\"https://colab.research.google.com/github/jdecorte/ai_ml/blob/main/solutions/031-exercise_heart_disease_solution.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
         "  </td>\n",
         "</table>"
       ]
